# tutorial_backend2

./: .gitignore  Aptfile  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
media/post_files/: ortega_y_gasset_quote.txt
ocr/: admin.py  models.py  serializers.py  urls.py  views.py
ocr/migrations/: 0001_initial.py
tutorial_backend/: asgi.py  settings.py  urls.py  wsgi.py
