[tool.poetry]
name = "tutorial_backend"
version = "0.1.0"
description = "the django backend to this tutorial"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
OCRmyPDF = "^10.2.0"
django = "^3.0.8"
djangorestframework = "^3.11.0"
django-heroku = "^0.3.1"
django-cors-headers = "^3.4.0"
whitenoise = "^5.1.0"
pytesseract = "^0.3.4"
ghostscript = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
